bindings/rust/libmem-sys/src/bindings.rs

extern "C" {
    #[doc = " The function places a hook/detour onto the address `from`, redirecting it to the address `to`.\n Optionally, it generates a trampoline in `trampoline_out` to call the original function.\n\n @param from The address where the hook will be placed.\n @param to The address where the hook will jump to.\n @param trampoline_out Optional pointer to an `lm_address_t` variable that will receive a trampoline/gateway to call the original function.\n\n @return The amount of bytes occupied by the hook (aligned to the nearest instruction)."]
    pub fn LM_HookCode(
        from: lm_address_t,
        to: lm_address_t,
        trampoline_out: *mut lm_address_t,
    ) -> lm_size_t;
}
extern "C" {
    #[doc = " The function places a hook/detour onto the address `from` in a remote process, redirecting it to the address `to`.\n Optionally, it generates a trampoline in `trampoline_out` to call the original function in the remote process.\n\n @param process The remote process to place the hook in.\n @param from The address where the hook will be placed in the remote process.\n @param to The address where the hook will jump to in the remote process.\n @param trampoline_out Optional pointer to an `lm_address_t` variable that will receive a trampoline/gateway to call the\n original function in the remote process.\n\n @return The amount of bytes occupied by the hook (aligned to the nearest instruction) in the remote process."]
    pub fn LM_HookCodeEx(
        process: *const lm_process_t,
        from: lm_address_t,
        to: lm_address_t,
        trampoline_out: *mut lm_address_t,
    ) -> lm_size_t;
}
extern "C" {
    #[doc = " The function removes a hook/detour placed on the address `from`, restoring it to its original state.\n The function also frees the trampoline allocated by `LM_HookCode`.\n\n @param from The address where the hook was placed.\n @param trampoline The address of the trampoline generated by `LM_HookCode`.\n @param size The amount of bytes occupied by the hook (aligned to the nearest instruction).\n\n @return `LM_TRUE` on success, `LM_FALSE` on failure."]
    pub fn LM_UnhookCode(
        from: lm_address_t,
        trampoline: lm_address_t,
        size: lm_size_t,
    ) -> lm_bool_t;
}
extern "C" {
    #[doc = " The function removes a hook/detour placed on the address `from` in a remote process, restoring it to its original state.\n The function also frees the trampoline allocated by `LM_HookCodeEx`.\n\n @param process The remote process where the hook was placed.\n @param from The address where the hook was placed in the remote process.\n @param trampoline The address of the trampoline generated by `LM_HookCodeEx`.\n @param size The amount of bytes occupied by the hook (aligned to the nearest instruction) in the remote process.\n\n @return `LM_TRUE` on success, `LM_FALSE` on failure."]
    pub fn LM_UnhookCodeEx(
        process: *const lm_process_t,
        from: lm_address_t,
        trampoline: lm_address_t,
        size: lm_size_t,
    ) -> lm_bool_t;
}
extern "C" {
    #[doc = " The function creates a new VMT manager from the VMT at `vtable`.\n\n @param vtable The virtual method table to manage.\n @param vmt_out A pointer to the VMT manager that will be populated by this function.\n\n @return On success, it returns `LM_TRUE`. On failure, it returns `LM_FALSE`."]
    pub fn LM_VmtNew(vtable: *mut lm_address_t, vmt_out: *mut lm_vmt_t) -> lm_bool_t;
}
extern "C" {
    #[doc = " The function hooks the VMT function at index `from_fn_index` in the VMT managed by `vmt`,\n changing it to `to`.\n\n @param vmt The VMT manager.\n @param from_fn_index The index of the VMT function to hook.\n @param to The function that will replace the original VMT function.\n\n @return On success, it returns `LM_TRUE`. On failure, it returns `LM_FALSE`."]
    pub fn LM_VmtHook(vmt: *mut lm_vmt_t, from_fn_index: lm_size_t, to: lm_address_t) -> lm_bool_t;
}
extern "C" {
    #[doc = " The function unhooks the VMT function at index `fn_index` in the VMT managed by `vmt`,\n restoring the original function.\n\n @param vmt The VMT manager.\n @param fn_index The index of the VMT function to unhook."]
    pub fn LM_VmtUnhook(vmt: *mut lm_vmt_t, fn_index: lm_size_t);
}
extern "C" {
    #[doc = " The function returns the original VMT function at index `fn_index` in the VMT managed by `vmt`.\n If the function has not been hooked before, it returns the function pointer at that index in the VMT array.\n\n @param vmt The VMT manager.\n @param fn_index The index of the VMT function to query.\n\n @return The original VMT function at index `fn_index` in the VMT managed by `vmt`."]
    pub fn LM_VmtGetOriginal(vmt: *const lm_vmt_t, fn_index: lm_size_t) -> lm_address_t;
}
extern "C" {
    #[doc = " The function resets all the VMT functions back to their original addresses.\n\n @param vmt The VMT manager."]
    pub fn LM_VmtReset(vmt: *mut lm_vmt_t);
}
extern "C" {
    #[doc = " The function frees the VMT manager, restoring everything.\n\n @param vmt The VMT manager."]
    pub fn LM_VmtFree(vmt: *mut lm_vmt_t);
}
